@@ -1,3 +1,7 @@
+2005-02-23  Per Bothner  <per@bothner.com>
+
+	* Symbol.java (hasEmptyNamespace): New method.
+
 2005-02-20  Per Bothner  <per@bothner.com>
 
 	* ConstrainedLocation.java: New class, extends Location.
